--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "adms",
+  "name": "jobwebapp",
   "version": "1.0.0",
   "description": "* create a folder give it a name anywhere in your computer best is the desktop ex: adms",
   "main": "index.js",
@@ -8,26 +8,22 @@
     "start": "nodemon index"
   },
   "keywords": [],
-  "author": "",
+  "author": "catalin cozobiac",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.1",
-    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-ejs-layouts": "^2.5.1",
-    "express-fileupload": "^1.3.1",
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.8",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "multer-gridfs-storage": "^5.0.2"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
